syntax = "proto3";

option csharp_namespace = "Makc2025.Dummy.Writer.Infrastructure.App.For.Grpc";

package Writer;

service App {
    rpc Login (AppLoginActionRequestForGrpc) returns (AppLoginActionReplyForGrpc);
}

message AppLoginActionRequestForGrpc {
    string user_name = 1;
    string password = 2;
}

message AppLoginActionReplyForGrpc {
    string user_name = 1;
    string access_token = 2;
}
